# TChaT

./: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: Untitled-1.json
src/: app.css  app.html
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0bc160f235f3996d3afc7d352c5ac59b7e054803ee43a909922c084b339ac5d0.json  query-2de3de228b2e29fcbd2b2526e93a324e839fa41018383a31ccc99e5a7b4b43fe.json  query-37ebee5e459a8bcec6b83253f75e5842c4332037a3775fe5295d23142da17208.json  query-43a6f758c668e287a50d40c54f762d667eb742d8eeebb383e3cc7b7325c471f2.json  query-64501a7f499b23a3da33c56b950ad027b00c824303a24b1a99e5c1d07c7bfb00.json  query-686f3e5f430f24b5e6099974b9b202a2d6e414eab30b19066e7417f0353c64bf.json  query-6a738fdaf4ff62b001a8e7a2c1eebb31276f66e1603f3feea230e5b97b0b788e.json  query-b25e56409acc8f85938a8d489eca78c39f706a67d5d739d2911f39109932d63d.json  query-c77dbd9dbbe70f381556fd309754b323c336291d1f7243d757c25291a14a6e84.json  query-e0103fbda89a5c045d1ceac4775bdb65d51fbbf82ac2ce17cec3ff7d5640dd8e.json  query-f3afb8f239e1daa5866469d425703b65d70b6e7fc347d9817dd49a30ec909e3d.json  query-f454f0d4e1b84b03be1949860d1778164dbec8644e3378d8aa2c30e8764adef5.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250824000001_create_senders_table.sql  20250824000002_create_messages_table.sql  20250830180727_create_chatrooms.sql  20250830180740_create_senders.sql  20250830180744_create_messages.sql  20250830180749_create_badges.sql  20250830180752_create_sender_badges.sql  20250831205324_create_badges_index.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/models/: api.rs  app.rs  db.rs  mod.rs
src-tauri/src/utils/: messages.rs
src/lib/chat/: emoteCache.ts  index.ts  parseMessage.ts  types.ts
src/lib/components/: Button.svelte  ChatTab.svelte  Emote.svelte  Formulary.svelte  Header.svelte  Message.svelte
src/lib/utils/: chat.ts  index.ts  time.ts
src/routes/: +layout.svelte  +page.svelte
