[package]
name = "t_chat"
version = "0.1.0"
description = "T Chat: Um cliente de chat de alta performance para a Kick. Construído com Rust e Tauri, ele usa Svelte para uma interface de usuário rápida e responsiva."
authors = ["Ricardo Teixeira dos Santos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.8", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-store = "2"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "macros",
    "runtime-tokio-native-tls",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-webpki-roots",
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
futures-util = "0.3.31"
dotenv = "0.15.0"
[features]

# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
